--- a/project/public/css/main.css
+++ b/project/public/css/main.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";
+@charset 'UTF-8';
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -171,18 +171,18 @@ input {
           box-shadow: none; }
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button; }
 
 /**
  * Remove the inner border and padding in Firefox.
  */
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0; }
 
@@ -190,9 +190,9 @@ button::-moz-focus-inner,
  * Restore the focus styles unset by the previous rule.
  */
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText; }
 
 /**
@@ -238,8 +238,8 @@ textarea {
  * 1. Add the correct box sizing in IE 10.
  * 2. Remove the padding in IE 10.
  */
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   /* 1 */
@@ -249,15 +249,15 @@ textarea {
 /**
  * Correct the cursor style of increment and decrement buttons in Chrome.
  */
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
   height: auto; }
 
 /**
  * 1. Correct the odd appearance in Chrome and Safari.
  * 2. Correct the outline style in Safari.
  */
-[type="search"] {
+[type='search'] {
   -webkit-appearance: textfield;
   /* 1 */
   outline-offset: -2px;
@@ -266,7 +266,7 @@ textarea {
 /**
  * Remove the inner padding in Chrome and Safari on macOS.
  */
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none; }
 
 /**
@@ -327,7 +327,7 @@ html {
   outline: none; }
 
 body {
-  font-family: "Arial", "Helvetica", sans-serif;
+  font-family: 'Arial', 'Helvetica', sans-serif;
   font-size: 19px;
   line-height: 23px;
   color: #000000;
@@ -672,7 +672,7 @@ main {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       font-family: "object-fit:cover;object-position:center top";
+       font-family: 'object-fit:cover;object-position:center top';
        object-fit: cover;
     -o-object-position: center top;
        object-position: center top; }
@@ -719,7 +719,7 @@ main {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       font-family: "object-fit:cover";
+       font-family: 'object-fit:cover';
        object-fit: cover; }
 
 .film-card__desc {
@@ -728,7 +728,7 @@ main {
           flex-grow: 1; }
 
 .film-card__title {
-  font-family: "Arial Black", sans-serif;
+  font-family: 'Arial Black', sans-serif;
   font-size: 32px;
   line-height: 45px;
   margin: 0 0 7px; }
@@ -969,7 +969,7 @@ main {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     font-family: "object-fit:cover";
+     font-family: 'object-fit:cover';
      object-fit: cover; }
 
 .player__exit {
@@ -1314,7 +1314,7 @@ main {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       font-family: "object-fit:cover";
+       font-family: 'object-fit:cover';
        object-fit: cover; }
 
 .small-film-card__image {
@@ -1370,7 +1370,7 @@ main {
     width: 100%;
     height: 100%;
     -o-object-fit: cover;
-       font-family: "object-fit:cover";
+       font-family: 'object-fit:cover';
        object-fit: cover; }
 
 .user-block__link {
